--- a/templates/index2.html
+++ b/templates/index2.html
@@ -51,7 +51,7 @@
     }
 
     .block1, .block2{
-        margin-left: 10%;
+        margin-left: 11%;
     }
 
     textarea {
@@ -63,10 +63,13 @@
         line-height: 2rem;
         margin: 0 auto;
         padding: 4px 8px;
+        resize: none;
+        border-radius: 10px;
+        box-shadow: 4px 10px 15px 6px rgba(34, 60, 80, 0.3);
     }
 
     button{
-        margin-left: 43%;
+        margin-left: 44%;
         margin-right: 50%;
         width: 150px;
         height: 50px;
